# gitlab-mcp-server

./: .env.example  .gitignore  Makefile  README.md  config.py  dev-requirements.txt  gitlab_api.py  logging_config.py  main.py  pyproject.toml  requirements.txt  run-mcp.sh  test_tools.py  utils.py
.github/workflows/: ci.yml  publish.yml
gitlab_mcp_server/: __init__.py  __main__.py
gitlab_mr_mcp/: __init__.py  config.py  gitlab_api.py  prompts.py  server.py  utils.py
gitlab_mr_mcp/tools/: __init__.py  approve_merge_request.py  create_merge_request.py  get_branch_merge_requests.py  get_commit_discussions.py  get_job_log.py  get_merge_request_details.py  get_merge_request_pipeline.py  get_merge_request_reviews.py  get_merge_request_test_report.py  get_pipeline_test_summary.py  list_merge_requests.py  list_my_projects.py  list_project_labels.py  list_project_members.py  merge_merge_request.py  reply_to_review_comment.py  search_projects.py  update_merge_request.py
tests/: conftest.py  test_errors.py  test_gitlab_api.py  test_imports.py  test_mcp_protocol.py  test_utils.py
tests/tools/: test_create_merge_request.py  test_get_branch_merge_requests.py  test_get_commit_discussions.py  test_get_job_log.py  test_get_merge_request_details.py  test_get_merge_request_pipeline.py  test_get_merge_request_reviews.py  test_get_merge_request_test_report.py  test_get_pipeline_test_summary.py  test_list_merge_requests.py  test_list_project_labels.py  test_list_project_members.py  test_reply_to_review_comment.py  test_update_merge_request.py
tools/: __init__.py  create_merge_request.py  get_branch_merge_requests.py  get_commit_discussions.py  get_job_log.py  get_merge_request_details.py  get_merge_request_pipeline.py  get_merge_request_reviews.py  get_merge_request_test_report.py  get_pipeline_test_summary.py  list_merge_requests.py  list_project_labels.py  list_project_members.py  reply_to_review_comment.py  update_merge_request.py
